# krita-deskew

./: CMakeLists.txt  Makefile.am  bitutil.cc  bwfactory.h  bwimage.cc  bwimage.h  deskewer.cc  deskewer.h  kis_deskew_filter.cc  kis_deskew_filter.h  kis_deskew_filter_plugin.cc  kis_deskew_filter_plugin.h  kritadeskewfilter.desktop  kritafact.cc  kritafact.h
